syntax = "proto3";

option go_package = "./sample";

import "google/protobuf/timestamp.proto";

service ProfileService {
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc GetUserCountry(GetUserCountryRequest) returns (GetUserCountryResponse);
    rpc GetUserDetailsByUserId(GetUserDetailsByUserIdRequest) returns (GetUserDetailsByUserIdResponse);
    rpc UpdateUserDetails(UpdateUserDetailsRequest) returns (UpdateUserDetailsResponse);
    rpc UpdateUserCountry(UpdateUserCountryRequest) returns (UpdateUserCountryResponse);
    rpc GetTotalPageCount(GetTotalPageCountRequest) returns (GetTotalPageCountResponse);
    rpc GetUserDetailsByEmail(GetUserDetailsByEmailRequest) returns (GetUserDetailsByEmailResponse);
    rpc UpdateUserRating(UpdateUserRatingRequest) returns (UpdateUserRatingResponse);
    rpc GetUserRating(GetUserRatingRequest) returns (GetUserRatingResponse);
    rpc GetAllUserIdsAndNames(GetAllUserIdsAndNamesRequest) returns (GetAllUserIdsAndNamesResponse);
    rpc GetAllUserIdsAndNamesDashboard(GetAllUserIdsAndNamesDashboardRequest) returns (GetAllUserIdsAndNamesDashboardResponse);
}

message User {
    string userName = 1;
    string firstName = 2;
    string middleName = 3;
    string lastName = 4;
    string dateOfBirth = 5;  // Using string for DATE type
    string displayName = 6;
    string phoneNumber = 7;
    string email = 8;
    string bio = 9;
    string userType = 10;
    string proximityAsSkill = 11;
    google.protobuf.Timestamp createdTimestamp = 12;
    google.protobuf.Timestamp lastUpdatedTimestamp = 13;
    string createdBy = 14;
    string updatedBy = 15;
    bool isActive = 16;
    int64 userId = 17;
    string country = 18;
    bool deleted = 19;
}

message GetAllUsersRequest {
    // Optional pagination parameters
    int64 pageSize = 1;
    int64 pageNumber = 2;
}

message GetAllUsersResponse {
    repeated User users = 1;
    int64 totalCount = 2;
}

// Request and response for fetching user country by UserID
message GetUserCountryRequest {
    int64 userId = 1;
}

message GetUserCountryResponse {
    int64 userId = 1;
    string country = 2;
}

// Request and response for fetching full user details by UserID
message GetUserDetailsByUserIdRequest {
    int64 userId = 1;
}

message GetUserDetailsByUserIdResponse {
    User user = 1;
}

message UpdateUserDetailsRequest {
    int64 userId = 1;
    string userName = 2;
    string firstName = 3;
    string middleName = 4;
    string lastName = 5;
    string dateOfBirth = 6;
    string displayName = 7;
    string phoneNumber = 8;
    string email = 9;
    string pin = 10;
    string bio = 11;
    string userType = 12;
    string proximityAsSkill = 13;
    string updatedBy = 14;
    bool isActive = 15;
    string country = 16;
}

message UpdateUserDetailsResponse {
    bool success = 1;
    string message = 2;
}

message UpdateUserCountryRequest {
    int64 userId = 1;
    string country = 2;
}

message UpdateUserCountryResponse {
    bool success = 1;
    string message = 2;
}

// Request for fetching total page count
message GetTotalPageCountRequest {
    int64 perPageEntries = 1; // Number of entries per page
}

// Response containing total number of users and total page count
message GetTotalPageCountResponse {
    int64 totalUserCount = 1;     // Total number of users in DB
    int64 totalPageCount = 2; // Computed total pages
}

message GetUserDetailsByEmailRequest {
    string email_prefix = 1;
}

message GetUserDetailsByEmailResponse {
    repeated User users = 1;
    int64 total_count = 2;
}

message UpdateUserRatingRequest {
    int64 userId = 1;
    int64 rating = 2;
}

message UpdateUserRatingResponse {
    bool success = 1;
    double rating = 2;
}

message GetUserRatingRequest {
    int64 userId = 1;
}

message GetUserRatingResponse {
    double rating = 1;
}

message GetAllUserIdsAndNamesRequest {
}

message GetAllUserIdsAndNamesResponse {
    map<int64, string> userIdsAndNames = 1;
}

message GetAllUserIdsAndNamesDashboardRequest {
}

message GetAllUserIdsAndNamesDashboardResponse {
    map<string, string> userIdsAndNames = 1;
}